# pypng

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.cython  README.md  README.txt  build.Dockerfile  build.py  dock  dock.sh  notes-Scondo-filter  pypng-version  pyproject.toml  setup-numpy.Dockerfile  setup.Dockerfile  setup.cfg  setup.py  tox.ini  unimport.py  vision.md
asset/: README.md
code/: cpngfilters.pyx  exnumpy.py  filters_embed.py  gen  iccp  iccp.py  kobo565topng  minpng.py  mkiccp.py  pipasgrey  pipcat  pipcolours  pipcomposite  pipdither  piprgb  pipscalez  pipstack  pipwindow  plan9topng.py  png.py  png_test.py  pngchunk  pngfilters.c  pngfilters.pxd  pngfilters.py  pngfilters_test.py  pnghist  pnglsch  pngsuite.py  pngtokobo565  pricatpng  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripngchunk  (+10 more)
code/test/: 00run-python3  chunk-4bit-transparent  chunk-background  chunk-delete  chunk-flob  chunk-gamma  chunk-grey-transparent  chunk-iccp  chunk-replace-gamma  chunk-sigbit  chunk-transparent  dither  interlace  latopam  pal  pal-grey  prichunkpng  prigreypng  prigreypng-alpha  prigreypng-bitdepths  prigreypng-help  pripalpng-229  pripalpng-alpha  pripam-4bit-transparent  pripam-background  pripam-comment  pripam-compression  pripam-gamma  pripam-interlace  pripam-transparent  pripam-version  sbit  (+16 more)
debian/: changelog  clean  control  copyright  rules
man/: ca.rst  chunk.rst  conf.py  ex.rst  index.rst  png.rst  tr20091230.rst
release/: index.txt
test/: README
(+11 files in other folders)
