[metadata]
name = pypng
version = 0.0.21dev
description = Pure Python library for saving and loading PNG images
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/drj11/pypng
author = David Jones
author_email = drj@pobox.com
license = MIT
license_file = LICENCE
classifiers =
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
	= code
py_modules =
    png
scripts =
    code/prichunkpng
    code/priditherpng
    code/priforgepng
    code/prigreypng
    code/pripalpng
    code/pripamtopng
    code/pripnglsch
    code/pripngtopam
    code/priweavepng
